--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -215,8 +215,8 @@
         <button type="button">Administrati</button>
       </div>
 
-      <div class="desc">
-        <div class="txt">
+
+        <div class="desc">
           <h4>sandellsandberg arkitekter AB</h4>
           <h5>Döbelnsgatan 54<br />
           113 52 Stockholm</h5>
@@ -225,33 +225,28 @@
           <span style="color: #000000; font-size: 18px;"> <a style="color: #000000; font-size: 18px;" href="mailto:press@sandellsandberg.se">press@sandellsandberg.se</a></span></h5>
         </div>
 
-        <div class="map">
-          <script type="text/javascript">
-	(function($){
-		$('head').append('<style type="text/css">    /*Tabs*/\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab a {\n        border-radius:0px;\n        border-color: #ffffff;\n        font-size: 14px !important;	\n		color: #ffffff;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab:not(.vc_active) a {\n		background-color: #0c0c0c !important;\n	}\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab a:hover {\n		color: #000000 !important;\n		background-color: #dbdbdb !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_tta-tab a .vc_tta-icon{\n		font-size: 30px !important;	\n		color: ;\n	}\n\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_active a{\n		color: #000000;\n		background-color: #dbdbdb !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-tabs-container .vc_tta-tabs-list li.vc_active a:hover{\n		background-color: #dbdbdb !important;\n	}\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs.classic_empty .vc_tta-tabs-container .vc_tta-tabs-list li.vc_active a{\n        border-radius:0px !important;\n        border-color: #ffffff !important; \n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-tabs .vc_tta-panels-container .vc_tta-panel{\n        background-color: ; \n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-panel .vc_tta-panel-body{\n    }\n    /*Accordion*/\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-panel .vc_tta-panel-heading{\n        border-color: #ffffff; \n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading{\n		background-color: #0c0c0c !important;\n		border-radius:0px;	\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading:hover{\n		background-color: #dbdbdb !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading{\n		background-color: #dbdbdb !important;\n		border-radius:0px;	\n		border-color: !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-body{\n        background-color: ;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a{\n		font-size: 14px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading h4 a{\n		color:#ffffff !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-heading h4 a:hover{\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading h4 a{\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading h4 a i:before, #tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-heading h4 a i:after{\n		border-color: #000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a i:before, #tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a i:after{\n		border-color: #ffffff !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-heading h4 a .vc_tta-icon{\n		font-size: 30px !important;	\n		color: ;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text{\n		font-size: 14px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel.vc_active .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text{\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text{\n		color:#ffffff !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion .vc_tta-panel:not(.vc_active) .vc_tta-panel-title a .vc_tta-title-text .accordion_inner_text:hover{\n		color:#000000 !important;\n    }\n    /* Tour*/\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a{\n		font-size: 14px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a .vc_tta-icon{\n		font-size: 30px !important;	\n		color: ;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab:not(.vc_active) a{\n		background-color: #0c0c0c !important;\n		color:#ffffff !important;\n\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab:not(.vc_active) a:hover{\n		background-color: #dbdbdb !important;\n		color:#000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab.vc_active a{\n		background-color: #dbdbdb !important;\n		color:#000000 !important;\n		border-color: !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab.vc_active a:before, #tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab.vc_active a:after{\n		border-color: #000000 !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a:before, #tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tour .vc_tta-tabs-container .vc_tta-tab a:after{\n		border-color: #ffffff !important;\n    }\n    /*Separator*/\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tabs:not(.big_icon) .vc_tta-panels-container:before{\n		top:-0px !important;\n    }\n#tabid_58b190db7415f.dfd_tabs_block .dfd_tta_tabs:not(.big_icon) .vc_tta-panels-container:after{\n		bottom:-0px !important;\n    }\n</style>');
-		$("#tabid_58b190db7415f.dfd_tabs_block .vc_tta-accordion.underline .vc_tta-title-text").each(function(){
-			var accordion_text = $(this).text();
-			$(this).text(" ");
-			$(this).append("<div class='accordion_inner_text'>" + accordion_text + "</div>");
-		});
-
-		$("#tabid_58b190db7415f .vc_tta-accordion .vc_tta-panels .vc_tta-panel").each(function(){
-			var $icon = $(this).find(".vc_tta-icon");
-			if($icon[0]){
-				$(this).find(".vc_tta-panel-title").addClass("hasIcon");
-			}
-		});
-
-	})(jQuery);
-</script>
-
+        <div class="desc">
+          <div class="map"></div>
         </div>
-      </div>
+
+
     </div>
     <!-- /Kontakt -->
 
+
   </div>
   <!-- /content -->
+
+
+  <!-- footer -->
+  <div class="footer">
+    <div class="row">
+      <a href="#" alt="Footer logo" target="_blank"><img src="img/af_logo.png" alt="logo" class="foot-logo" /></a>
+      <div>sandellsandberg är en del av ÅF</div>
+
+    </div>
+  </div>
+  <!-- /footer -->
 
 
 
