--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -218,10 +218,10 @@
 
         <div class="desc">
           <h4>sandellsandberg arkitekter AB</h4>
-          <h5>Döbelnsgatan 54<br />
-          113 52 Stockholm</h5>
+          <h5>Döbelnsgatan 54<br />113 52 Stockholm</h5>
           <h5>+46 (0) 8 506 531 00<br />
-            <span><a href="mailto:info@sandellsandberg.se">info@sandellsandberg.se</a></span><br />
+            <span><a href="mailto:info@sandellsandberg.se">info@sandellsandberg.se</a></span>
+            <br />
             <span> <a href="mailto:press@sandellsandberg.se">press@sandellsandberg.se</a></span>
           </h5>
         </div>
