--- a/ho-ginza/index.html
+++ b/ho-ginza/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/ico" href="http://ho-ginza.com/img/favicon.ico" />
   <title>http://ho-ginza.com/</title>
-  <link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/intro.js" charset="utf-8"></script>
-  <script src="js/fix.js" charset="utf-8"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script src="js/intro.js" charset="utf-8"></script>
+<script src="js/fix.js" charset="utf-8"></script>
 </head>
-<body>
+<body onload="initialize()">
 
   <div class="container">
 
@@ -165,8 +166,60 @@
       </div>
 
       <!-- map -->
-      <div class="map_area">
-        <img src="img/map.png" id="map" alt="">
+      <div class="map_area" id="map_view">
+        <script>
+          function initialize() {
+
+            /*
+              http://openapi.map.naver.com/api/geocode.php?key=f32441ebcd3cc9de474f8081df1e54e3&encoding=euc-kr&coord=LatLng&query=서울특별시 강남구 강남대로 456
+                      위의 링크에서 뒤에 주소를 적으면 x,y 값을 구할수 있습니다.
+            */
+            var Y_point			= 35.670625;		// Y 좌표
+            var X_point			= 139.762742;		// X 좌표
+
+            var zoomLevel		= 16;						// 지도의 확대 레벨 : 숫자가 클수록 확대정도가 큼
+
+            var markerTitle		= "ちゃんこ屋「鵬」";				// 현재 위치 마커에 마우스를 오버을때 나타나는 정보
+            var markerMaxWidth	= 300;						// 마커를 클릭했을때 나타나는 말풍선의 최대 크기
+
+            // 말풍선 내용
+            var contentString	= '<div>' +
+            '<h2>ho-ginza</h2>'+
+            '<p>宮城野部屋ちゃんこ 鵬（ほう</p>' +
+            //'<a href="http://www.daegu.go.kr" target="_blank">http://www.daegu.go.kr</a>'+ //링크도 넣을 수 있음
+            '</div>';
+
+            var myLatlng = new google.maps.LatLng(Y_point, X_point);
+            var mapOptions = {
+                      zoom: zoomLevel,
+                      center: myLatlng,
+                      mapTypeId: google.maps.MapTypeId.ROADMAP
+            }
+            var map = new google.maps.Map(document.getElementById('map_view'), mapOptions);
+
+            var icon =   './img/icon_map.png';
+            var marker = new google.maps.Marker({
+                                position: myLatlng,
+                                map: map,
+                                title: markerTitle,
+                                icon: icon
+                                // new google.maps.Size(90,102), // size
+                                // new google.maps.Point(0,0),  // origin
+                                // new google.maps.Point(45,102) // anchor
+            });
+
+            var infowindow = new google.maps.InfoWindow(
+                                  {
+                                    content: contentString,
+                                    maxWidth: markerMaxWidth
+                                  }
+            );
+
+            google.maps.event.addListener(marker, 'click', function() {
+              infowindow.open(map, marker);
+            });
+          }
+        </script>
       </div>
       <!-- /map -->
     </section>
