--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -14,12 +14,13 @@
 <script src="js/script.js" charset="utf-8"></script>
 <script src="js/btn.js" charset="utf-8"></script>
 <script src="js/hover.js" charset="utf-8"></script>
+<script src="js/fix.js" charset="utf-8"></script>
 </head>
 <body onload="initialize()">
 
   <!-- gnb -->
   <div class="gnb">
-    <a href="#"><img src="img/sa_b_170x63.png" class="logo" alt="sandellsandberg"></a>
+    <a href="#"><img src="img/sa_b_170x63.png" alt="sandellsandberg"></a>
     <ul>
       <li><a href="#">Om oss</a></li>
       <li><a href="#">Aktuellt</a></li>
