--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -20,14 +20,20 @@
 
   <!-- gnb -->
   <div class="gnb">
-    <a href="#"><img src="img/sa_b_170x63.png" alt="sandellsandberg"></a>
-    <ul>
-      <li><a href="#">Om oss</a></li>
-      <li><a href="#">Aktuellt</a></li>
-      <li><a href="#">Projekt</a></li>
-      <li><a href="#">Jobb</a></li>
-      <li><a href="#">Kontakt</a></li>
-    </ul>
+
+    <!-- gnb_panel -->
+    <div class="gnb_panel">
+      <a href="#"><img src="img/sa_b_170x63.png" alt="sandellsandberg"></a>
+      <ul>
+        <li><a href="#">Om oss</a></li>
+        <li><a href="#">Aktuellt</a></li>
+        <li><a href="#">Projekt</a></li>
+        <li><a href="#">Jobb</a></li>
+        <li><a href="#">Kontakt</a></li>
+      </ul>
+    </div>
+    <!-- /gnb_panel -->
+    
   </div>
   <!-- /gnb -->
 
