--- a/dean/contact.html
+++ b/dean/contact.html
@@ -7,10 +7,15 @@
   <link rel="shortcut icon" href="img/logo_title.png">
   <title> http://officialdean.com/contact/ </title>
   <link rel="stylesheet" href="css/common.css"/>
-  <link rel="stylesheet" href="./css/contact.css"/>
+  <link rel="stylesheet" href="css/contact.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/font.css"/>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/fix.js" charset="utf-8"></script>
+  <script src="js/news.js" charset="utf-8"></script>
+  <script src="js/upcomingshows.js" charset="utf-8"></script>
+  <script src="js/fadebanner.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -40,37 +45,41 @@
     <!-- contact-->
     <section id="contact" >
 
-      <div class="namemail">
-        <input type="text" name="your-first" value="" placeholder="Your Name" />
-        <input type="text" name="your-email" value="" placeholder="Your Email" />
-      </div>
+      <form action="" method="post" novalidate="novalidate">
 
-      <div class="txt">
-        <textarea name="your-message" cols="40" rows="10" placeholder="Your Message"></textarea>
-      </div>
+        <div class="namemail">
+          <input type="text" name="your-first" value="" placeholder="Your Name" />
+          <input type="text" name="your-email" value="" placeholder="Your Email" />
+        </div>
 
-      <div class="submit">
-        <input type="submit" value="Send Message" />
-      </div>
+        <div class="txt">
+          <textarea name="your-message" cols="40" rows="10" placeholder="Your Message"></textarea>
+        </div>
+
+        <div class="submit">
+          <input type="submit" value="Send Message" />
+        </div>
+
+      </form>
 
     </section><!-- /contact-->
 
 <!-- ======================================================================= -->
 
     <!-- icon_group-->
-    <center id="icon_group">
+    <section id="icon_group">
 
       <a class="fa fa-facebook-square fa-lg yel" href="https://www.facebook.com/deantheofficial"></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a class="fa fa-soundcloud fa-lg yel" href="https://soundcloud.com/deantheofficial"></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a class="fa fa-youtube fa-lg yel" href="https://www.youtube.com/channel/UCnCEKlzi52Yzj2JdBFhKVEA"></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a class="fa fa-instagram fa-lg yel" href="https://instagram.com/deantrbl/"></a>
-      &nbsp&nbsp
+      &nbsp;&nbsp;
       <a class="fa fa-twitter fa-lg yel" href="https://twitter.com/deantheofficial"></a>
 
-    </center><!-- /icon_group-->
+    </section><!-- /icon_group-->
 
 <!-- ======================================================================= -->
 
