--- a/dean/index.html
+++ b/dean/index.html
@@ -78,7 +78,7 @@
       <!-- soundcloud -->
       <section id="soundcloud">
 		<center>
-          <iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/216522597&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+          <iframe width="50%" height="350" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/216522597&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
         </center>
       </section><!-- /soundcloud -->
 
@@ -1105,14 +1105,15 @@
      https://www.w3schools.com/tags/ref_av_dom.asp
      모양 만들고 스크립트로 재생 정지 만들기
     -->
+    <!-- player -->
     <div id="player">
       <div class="player">
+        <div class="x">x</div>
         <audio controls>
-        <source src="horse.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-        </audio>
+        <source src="horse.mp3" type="audio/mpeg"></audio>
       </div>
     </div>
+    <!-- /player -->
 
 </body>
 </html>
