--- a/dean/index.html
+++ b/dean/index.html
@@ -1109,8 +1109,13 @@
     <div id="player">
       <div class="player">
         <div class="x">x</div>
-        <audio controls>
-        <source src="horse.mp3" type="audio/mpeg"></audio>
+
+        <div class="left"></div>
+
+        <div class="right">
+          <audio controls>
+          <source src="horse.mp3" type="audio/mpeg"></audio>
+        </div>
       </div>
     </div>
     <!-- /player -->
