--- a/dean/index.html
+++ b/dean/index.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="css/common.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/font.css"/>
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/fix.js" charset="utf-8"></script>
   <script src="js/upcomingshows.js" charset="utf-8"></script>
   <script src="js/fadebanner.js" charset="utf-8"></script>
+  <script src="js/player.js" charset="utf-8"></script>
 </head>
 <body>
 
@@ -1145,21 +1145,18 @@
           </div>
         </div>
 
-        <div class="control">
+        <div id="control">
           <a class="fa fa-caret-square-o-up"></a>
           <a class="fa fa-random"></a>
           <a class="fa fa-list"></a>
         </div>
-
-
         <!-- <audio controls>
         <source src="horse.mp3" type="audio/mpeg"></audio> -->
       </div>
 
-
     </div>
   </div>
-  <!-- /player -->
+  <!-- /player_wrap -->
 
 </body>
 </html>
