--- a/dean/index.html
+++ b/dean/index.html
@@ -1121,21 +1121,17 @@
   <div id="player_wrap">
 
     <div id="player">
-<<<<<<< HEAD
-=======
+
       <div id="plus">+</div>
 
-
->>>>>>> deb5fdcdb569edfcf97816fbc3dd0c6b7f6dbc7c
-
       <div class="left">
-        <div id="plus">+</div>
 
         <div id="fap-cover-wrapper">
           <div id="fap-cover-replacement">
             <span>...</span>
           </div>
         </div>
+
       </div>
 
 
@@ -1148,7 +1144,8 @@
           <a class="fa fa-forward"></a>
 
           <div id="volume">
-            <div class="fap-volume-bar"></div>
+            <input type="range" class="fap-volume-bar" min="0" max="10" value="4">
+            <!-- <div class="fap-volume-bar"></div> -->
             <div class="fap-volume-sign fa fa-volume-up"></div>
           </div>
 
