--- a/dean/index.html
+++ b/dean/index.html
@@ -59,19 +59,19 @@
 
         <!-- itunes streaming btn -->
         <ul id="itunes">
-          <li class="btn"><a href="https://itunes.apple.com/us/album/130-mood-trbl/id1094604739">itunes us</a></li>
-          <li class="btn"><a href="https://itunes.apple.com/gb/album/130-mood-trbl/id1091980376">itunes uk</a></li>
+          <li><a href="https://itunes.apple.com/us/album/130-mood-trbl/id1094604739"><div class="btn">itunes us</div></a></li>
+          <li><a href="https://itunes.apple.com/gb/album/130-mood-trbl/id1091980376"><div class="btn">itunes uk</div></a></li>
         </ul>
 
         <p><span style="font-size: 150%;"><strong>&darr;album purchase&darr;</strong></span></p>
 
         <!-- purchase_album btn -->
         <ul id="purchase_album">
-          <li class="btn"><a href="http://www.hottracks.kr/Product/Detail/view/pid/24872/cid/">hottracks</a></li>
-          <li class="btn"><a href="http://po.st/hDEoj2">yes24</a></li>
-          <li class="btn"><a href="http://music.aladin.co.kr/shop/wproduct.aspx?ItemId=79834671&amp;start=slayer">aladin</a></li>
-          <li class="btn"><a href="http://po.st/KMybms">interpark</a></li>
-          <li class="btn"><a href="http://po.st/JjBzQZ">synnara</a></li>
+          <li><div class="btn"><a href="http://www.hottracks.kr/Product/Detail/view/pid/24872/cid/">hottracks</div></a></li>
+          <li><div class="btn"><a href="http://po.st/hDEoj2">yes24</div></a></li>
+          <li><div class="btn"><a href="http://music.aladin.co.kr/shop/wproduct.aspx?ItemId=79834671&amp;start=slayer">aladin</div></a></li>
+          <li><div class="btn"><a href="http://po.st/KMybms">interpark</a></li>
+          <li><div class="btn"><a href="http://po.st/JjBzQZ">synnara</div></a></li>
         </ul>
       </section>
 
