--- a/dean/index.html
+++ b/dean/index.html
@@ -67,11 +67,11 @@
 
         <!-- purchase_album btn -->
         <ul id="purchase_album">
-          <li><div class="btn"><a href="http://www.hottracks.kr/Product/Detail/view/pid/24872/cid/">hottracks</div></a></li>
-          <li><div class="btn"><a href="http://po.st/hDEoj2">yes24</div></a></li>
-          <li><div class="btn"><a href="http://music.aladin.co.kr/shop/wproduct.aspx?ItemId=79834671&amp;start=slayer">aladin</div></a></li>
-          <li><div class="btn"><a href="http://po.st/KMybms">interpark</a></li>
-          <li><div class="btn"><a href="http://po.st/JjBzQZ">synnara</div></a></li>
+          <li><a href="http://www.hottracks.kr/Product/Detail/view/pid/24872/cid/"><div class="btn">hottracks</div></a></li>
+          <li><a href="http://po.st/hDEoj2"><div class="btn">yes24</div></a></li>
+          <li><a href="http://music.aladin.co.kr/shop/wproduct.aspx?ItemId=79834671&amp;start=slayer"><div class="btn">aladin</div></a></li>
+          <li><a href="http://po.st/KMybms"><div class="btn">interpark</div></a></li>
+          <li><a href="http://po.st/JjBzQZ"><div class="btn">synnara</div></a></li>
         </ul>
       </section>
 
