--- a/sandellsandberg/index.html
+++ b/sandellsandberg/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script src="js/script.js" charset="utf-8"></script>
+<script src="js/fadebanner.js" charset="utf-8"></script>
 <script src="js/btn.js" charset="utf-8"></script>
 <script src="js/hover.js" charset="utf-8"></script>
 <script src="js/fix.js" charset="utf-8"></script>
@@ -47,28 +47,28 @@
     <!-- banner -->
     <div class="fadebanner">
 
-      <ul>
-        <li>
+      <ul class="view">
+        <li class="on">
           <a href="">1</a>
           <img src="img/img_1.jpg" alt="">
         </li>
-        <li>
+        <li class="on">
           <a href="">2</a>
           <img src="img/img_2.jpg" alt="">
         </li>
-        <li>
+        <li class="on">
           <a href="">3</a>
           <img src="img/img_3.jpg" alt="">
         </li>
-        <li>
+        <li class="on">
           <a href="">4</a>
           <img src="img/img_4.jpg" alt="">
         </li>
-        <li>
+        <li class="on">
           <a href="">5</a>
           <img src="img/img_5.jpg" alt="">
         </li>
-        <li>
+        <li class="on">
           <a href="">6</a>
           <img src="img/img_6.jpg" alt="">
         </li>
@@ -76,6 +76,7 @@
 
       <button class="prev"><i class="vc_tta-icon fa fa-chevron-left"></i></button>
       <button class="next"><i class="vc_tta-icon fa fa-chevron-right"></i></button>
+
     </div>
     <!-- /banner -->
 
