--- a/dean/index.html
+++ b/dean/index.html
@@ -8,22 +8,26 @@
   <meta name="apple-touch-fullscreen" content="yes">
   <meta http-equiv="cleartype" content="on">
   <meta name="HandheldFriendly" content="True">
-<link rel="shortcut icon" href="img/logo_title.png">
+  <link rel="shortcut icon" href="img/logo_title.png">
   <title> http://officialdean.com/ </title>
   <link rel="stylesheet" href="css/common.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/font.css"/>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://code.lengstorf.com/responsive-lazyload.js/css/example-only.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/fix.js" charset="utf-8"></script>
   <script src="js/upcomingshows.js" charset="utf-8"></script>
   <script src="js/fadebanner.js" charset="utf-8"></script>
   <script src="js/player.js" charset="utf-8"></script>
+
 </head>
 <body>
 
   <div id="container">
+
+
 
     <header></header>
 
@@ -1160,6 +1164,7 @@
     </div>
   </div>
   <!-- /player_wrap -->
+
 
 </body>
 </html>
