--- a/dean/index.html
+++ b/dean/index.html
@@ -87,14 +87,16 @@
   <div id="container">
 
     <div class="js--lazyload" style="padding-bottom: 66.67%">
-        <img alt="image description"
+        <!-- <img alt="image description"
              src="img/album_1901x950.jpg"
              srcset="data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
              data-lazyload="img/album_1901x950.jpg 300w,
                             img/album_1901x950.jpg 600w,
                             img/album_1901x950.jpg 690w,
-                            img/album_1901x950.jpg 1380w">
+                            img/album_1901x950.jpg 1380w"> -->
+          <header></header>
     </div>
+
 
     <!-- gnb_wrap -->
     <section class="gnb_wrap" class="yel">
