--- a/dean/index.html
+++ b/dean/index.html
@@ -82,8 +82,9 @@
 </head>
 
 <body>
-http://ryuseunghyun.tistory.com/889
-height 100%맞추기
+  
+<!-- http://ryuseunghyun.tistory.com/889
+height 100%맞추기 -->
 
   <div id="container">
 
