--- a/philipHouse/index.html
+++ b/philipHouse/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="./img/short.png">
   <title>http://www.philiphousenyc.com/</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -25,7 +26,7 @@
 
 
     <ul class="menu">
-      <li><a href="#">the building</a></li>
+      <li><a href="./building.html">the building</a></li>
       <li><a href="#">residences</a></li>
       <li><a href="#">penthouses</a></li>
       <li><a href="#">availability</a></li>
