--- a/ho-ginza/index.html
+++ b/ho-ginza/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="img/shortcut.ico">
+  <link rel="shortcut icon" href="images/shortcut.ico">
   <title> http://ho-ginza.com/ </title>
 <link rel="stylesheet" href="css/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -20,8 +20,8 @@
 
     <!-- intro -->
     <div class="intro">
-  		<div class="logo"><img src="img/intro_logo.png" alt="HO 鵬" width="228" height="231"></div>
-  		<h1 class="intro_txt"><img src="img/intro_txt.png" alt="横綱を育てた宮城野部屋の本物の味を、銀座で。"></h1>
+  		<div class="logo"><img src="images/intro_logo.png" alt="HO 鵬" width="228" height="231"></div>
+  		<h1 class="intro_txt"><img src="images/intro_txt.png" alt="横綱を育てた宮城野部屋の本物の味を、銀座で。"></h1>
 		  <div class="line"></div>
 	  </div>
     <!-- /intro -->
@@ -35,15 +35,15 @@
       <div class="header">
 
 				<div class="main_icon">
-          <a href="http://twitter.com/share?url=http://ho-ginza.com/&text=鵬 -HO- ｜横綱を育てた宮城野部屋の本物の味を、銀座で。"><img src="img/btn_twitter.png" alt="Twitter"></a>
-          <img src="img/slash.png" alt="/">
-          <a href="http://www.facebook.com/share.php?u=http://ho-ginza.com/"><img src="img/btn_facebook.png" alt="Facebook"></a>
+          <a href="http://twitter.com/share?url=http://ho-ginza.com/&text=鵬 -HO- ｜横綱を育てた宮城野部屋の本物の味を、銀座で。"><img src="images/btn_twitter.png" alt="Twitter"></a>
+          <img src="images/slash.png" alt="/">
+          <a href="http://www.facebook.com/share.php?u=http://ho-ginza.com/"><img src="images/btn_facebook.png" alt="Facebook"></a>
         </div>
 
-        <img src="img/main_logo.png" id="main_logo" alt="HO 鵬 logo">
-        <img src="img/main_txt.png" id="main_txt" alt="白鵬を育てた、ちゃんこ鍋">
-        <img src="img/main_txt_right.png" id="main_txt_right" alt="横綱を育てた宮城野部屋の本物の味を、銀座で">
-        <img src="img/icon_scroll.png" id="icon_scroll" alt="">
+        <img src="images/main_logo.png" id="main_logo" alt="HO 鵬 logo">
+        <img src="images/main_txt.png" id="main_txt" alt="白鵬を育てた、ちゃんこ鍋">
+        <img src="images/main_txt_right.png" id="main_txt_right" alt="横綱を育てた宮城野部屋の本物の味を、銀座で">
+        <img src="images/icon_scroll.png" id="icon_scroll" alt="">
       </div>
       <!-- /header -->
 
@@ -54,34 +54,34 @@
 
         <div class="lnb">
 
-          <div id="lnb_logo"><img src="img/lnb_logo.png" alt="HO 鵬 small_logo"></div>
+          <div id="lnb_logo"><img src="images/lnb_logo.png" alt="HO 鵬 small_logo"></div>
 
           <div class="l"></div>
 
           <!-- lnb_list -->
           <ul class="lnb_list">
             <li>
-              <a href="#notice"><img src="img/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
+              <a href="#notice"><img src="images/lnb_1.png" id="lnb_1" alt="お知らせ"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#about"><img src="img/lnb_2.png" id="lnb_1" alt="お店の想い"></a>
+              <a href="#about"><img src="images/lnb_2.png" id="lnb_1" alt="お店の想い"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#menu"><img src="img/lnb_3.png" id="lnb_1" alt="お品書き"></a>
+              <a href="#menu"><img src="images/lnb_3.png" id="lnb_1" alt="お品書き"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#menu_list"><img src="img/lnb_4.png" id="lnb_1" alt="アクセス"></a>
+              <a href="#menu_list"><img src="images/lnb_4.png" id="lnb_1" alt="アクセス"></a>
               <div class="o"></div>
             </li>
 
             <li>
-              <a href="#tel"><img src="img/lnb_5.png" id="lnb_1" alt="お問い合わせ"></a>
+              <a href="#tel"><img src="images/lnb_5.png" id="lnb_1" alt="お問い合わせ"></a>
               <div class="o"></div>
             </li>
           </ul>
@@ -95,7 +95,7 @@
 
       <!-- notice -->
       <section id="notice">
-        <img src="img/notice.png" alt="お知らせ">
+        <img src="images/notice.png" alt="お知らせ">
 
         <dl>
           <dt>２月のお休み</dt>
@@ -109,8 +109,8 @@
 
       <!-- about -->
       <section id="about">
-        <img src="img/about_txt.png" id="about_txt" alt="">
-        <img src="img/about_img.png" id="about_img" alt="">
+        <img src="images/about_txt.png" id="about_txt" alt="">
+        <img src="images/about_img.png" id="about_img" alt="">
         <div class="line"></div>
       </section>
       <!-- /about -->
@@ -126,10 +126,10 @@
     <!-- menu -->
     <section id="menu">
 
-      <img src="img/menu_img.png" id="menu_img" alt="">
+      <img src="images/menu_img.png" id="menu_img" alt="">
 
       <h2 class="menu_tit">
-        <img src="img/menu_tit.png" id="menu_tit" alt="">
+        <img src="images/menu_tit.png" id="menu_tit" alt="">
       </h2>
 
     </section>
@@ -139,7 +139,7 @@
 
     <!-- menu_list -->
     <section id="menu_list">
-      <img src="img/menu_list.png" alt="">
+      <img src="images/menu_list.png" alt="">
       <p>&#8251; 別途、消費税（８％）・サービス料（５％）を頂戴いたします。</p>
     </section>
     <!-- /menu_list -->
@@ -156,7 +156,7 @@
     <!-- access -->
     <section id="access">
       <div class="access_txt">
-        <h2><img src="img/access_tit.png" alt=""></h2>
+        <h2><img src="images/access_tit.png" alt=""></h2>
 
         <ul>
           <li>〒104-0061</li>
@@ -199,7 +199,7 @@
             }
             var map = new google.maps.Map(document.getElementById('map_view'), mapOptions);
 
-            var icon = './img/icon_map.png';
+            var icon = './images/icon_map.png';
             var marker = new google.maps.Marker({
                                 position: myLatlng,
                                 map: map,
@@ -231,7 +231,7 @@
 
     <!-- tel -->
     <section id="tel">
-      <img src="img/tel_img.png" alt="TEL：03-6264-5635">
+      <img src="images/tel_img.png" alt="TEL：03-6264-5635">
       <div class="line"></div>
     </section>
     <!-- /tel -->
